--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -9,6 +9,10 @@
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     grid-gap: 6rem;
     align-items: start;
+
+    @media only screen and (max-width: $bp-small) {
+        margin: 8rem 0;
+    }
 }
 
 .feature {
@@ -21,7 +25,7 @@
     &__icon {
         fill: $color-primary;
         width: 4.5rem;
-        height: 4.5rem;
+        height: 4.5rem; 
         grid-row: 1 / span 2;
         transform: translateY(-1rem);
     }
