--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -7,6 +7,11 @@
     grid-template-rows: repeat(7, 5vw);
     grid-gap: 1.5rem;
     padding: 1.5rem;
+
+    @media only screen and (max-width: $bp-small) {
+        grid-gap: .6rem;
+        padding: .6rem;
+    }
     
 
     &__item {
